# spot-hinta

./: .gitignore  data.json  docker-compose.yml  energy_prices.html  nginx.conf  pythonapp.py  readme.md  requirements.txt
cpp/: CMakeLists.txt  Dockerfile  app.cpp
go/: Dockerfile  app.go  go.mod
kubernetes/: deploy_and_port_forward.sh  go-app-service.yaml  go-deployment.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  python-app-service.yaml  python-deployment.yaml  service.yaml
pyhton/: Dockerfile  app.py  requirements.txt
pyhton/templates/: index.html
templates/: index.html
